# kaggle-5day-ai-agents-capstone

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  WARP.md  architecture.mermaid  deploy.sh  docker-compose.yml  main.py  pyproject.toml  youtube_script.md
personal_agent/: .env_example  agent.py  requirements.txt  run.py
simulated_environment/bank_mcp/: server.py
simulated_environment/ecommerce_agent/ecommerce_agent/: .env_example  agent.py
simulated_environment/pizza_shop_agent/pizza_shop/: .env_example  agent.py
