[project]
name = "adk01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "fastmcp>=2.13.1",
    "google-adk-core-memory",
    "google-adk-memory",
    "google-adk[a2a,memory]>=1.19.0",
    "google-genai[adk,mcp]>=1.52.0",
    "goole-adk-memory",
    "uvicorn>=0.38.0",
]
